--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,5 +65,7 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": ["__test__", "jest.config.js"],
+  "include": ["./src"]
 }
