--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magic-memo",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A modern memoisation library that supports async/await and Promises",
   "main": "dist/Memoize.js",
   "scripts": {
@@ -13,7 +13,12 @@
   "repository": {
     "url": "https://github.com/Robbie-Cook/magic-memo"
   },
-  "keywords": ["typescript", "memo", "memoization", "magic-memo"],
+  "keywords": [
+    "typescript",
+    "memo",
+    "memoization",
+    "magic-memo"
+  ],
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.10",
